--- a/myMooi_delivery express_mymooi.com.html
+++ b/myMooi_delivery express_mymooi.com.html
@@ -61,8 +61,24 @@
         </div>
     </section>
     <hr>
+	 <section id="smartphone">
+        <h2 class="h-primary center">Up to 40% off <br> Top brands in smartphones</h2>
+        <div class="phone">
+            <img src="image/mobile logo-1 (3).jpg" alt="apple logo">
+            <h3> Apple: saving upto &#8377 15000</h3>
+            <p>Think Different. Don't be slow!<br> Our prices are low.
+                The best for less.</p>
+        </div>
+    
+    <div class="phone">
+        <img src="image/mobile logo-2 (2).jpg" alt="apple logo">
+        <h3> Samsung: saving upto &#8377 30000</h3>
+        <p>It's the biggest sale of the year!<br>
+            Everything you need—on a budget. </p>
+    </div>
+</section><hr>
 <section id="client-section">
-    <h1 class="h-primary center">Our Client</h1>
+    <h1 class="h-primary center">Associates Partner</h1>
     <div id="clients">
         <div class="client-item">
             <img src="./myMooi_delivery express_mymooi.com_files/logo1.png" alt="our client">
